Replaces collect(toList()) by toList() in GeneratePropertyNamesProcessor.